@@ -622,6 +622,7 @@ export(w_se)
 export(w_spearman)
 export(w_sum)
 export(w_var)
+export(weight_by)
 export(when)
 export(where)
 export(window_fun)
